// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox snapshots alert: alert close 1`] = `
<body>
  
  
  

  <div>
    <div
      class="testDiv"
    />
  </div>
</body>
`;

exports[`MessageBox snapshots alert: alert show 1`] = `
<body>
  
  
  

  <div>
    <div
      class="testDiv"
    />
  </div>
  <div>
    <div
      class="eui-cover eui-fade-entry-active eui-fade"
    />
    <div
      class="eui-messagebox undefined eui-messagebox-buttons-multiline-single eui-fade-entry-active eui-fade"
    >
      <p
        class="eui-messagebox-title"
      >
        title
      </p>
      <div
        class="eui-messagebox-content"
      >
        MessageBoxText
      </div>
      <div
        class="eui-messagebox-buttons eui-messagebox-buttons-multiline"
      >
        <button
          class="eui-button eui-button-l eui-button-primary"
          role="button"
        >
          confirmChildren
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`MessageBox snapshots confirm: confirm close 1`] = `
<body>
  
  
  

  <div>
    <div
      class="testDiv"
    />
  </div>
</body>
`;

exports[`MessageBox snapshots confirm: confirm show 1`] = `
<body>
  
  
  

  <div>
    <div
      class="testDiv"
    />
  </div>
  <div>
    <div
      class="eui-cover eui-fade-entry-active eui-fade"
    />
    <div
      class="eui-messagebox eui-fade-entry-active eui-fade"
    >
      <p
        class="eui-messagebox-title"
      >
        title
      </p>
      <div
        class="eui-messagebox-content"
      >
        MessageBoxText
      </div>
      <div
        class="eui-messagebox-buttons eui-messagebox-buttons-multiline"
      >
        <button
          class="eui-button eui-button-l eui-button-primary"
          role="button"
        >
          confirmChildren
        </button>
        <button
          class="eui-button eui-messagebox-buttons-multiline-last eui-button-l eui-button-customize eui-button-ghost"
          role="button"
        >
          cancel
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`MessageBox snapshots model: model close 1`] = `
<body>
  <div>
    <div
      class="testDiv"
    />
  </div>
</body>
`;

exports[`MessageBox snapshots model: model show 1`] = `
<body>
  <div>
    <div
      class="testDiv"
    />
  </div>
  <div>
    <div
      class="eui-cover eui-fade-entry-active eui-fade"
    />
    <div
      class="eui-messagebox eui-fade-entry-active eui-fade"
    >
      <div
        class="eui-messagebox-content"
      >
        MessageBoxText
      </div>
      <div
        class="eui-messagebox-line"
      />
    </div>
  </div>
</body>
`;
